gccida/c3/complete_array_type
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/complete_array_type/src/c-decl.c:4427:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v9; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/complete_array_type/src/c-decl.c:4428:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *i; // rdx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/complete_array_type/src/c-decl.c:4430:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v12; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/complete_array_type/src/c-decl.c:4462:19: error: expected expression
v9 = ( tree_node *)high[3]; 
                  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/complete_array_type/src/c-decl.c:4462:8: error: use of undeclared identifier 'tree_node'
v9 = ( tree_node *)high[3]; 
       ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/complete_array_type/src/obj/c-decl.o] Error 1
